Fix overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,7 +78,6 @@ html.noscroll body {
 .goodpopup-inner-content-element_hided {
     opacity: 0;
     transform: scale(0.7);
-    overflow: hidden;
 }
 .goodpopup-inner-content-element_hidedfull {
     position: absolute;
